<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search_activity_title_text"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"/>

    <!-- Name input linear layout. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_activity_name_text"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:layout_weight=".4"/>

        <EditText
            android:id="@+id/search_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/search_activity_name_input_hint"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight=".6"/>
    </LinearLayout>

    <!--Linear layout for the cuisines dropdown-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_activity_cuisines_text"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:layout_weight=".4"/>

        <!-- Dropdown -->
        <Spinner
            android:id="@+id/search_cuisine_dropdown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

        </Spinner>
    </LinearLayout>

    <!--Linear layout for number of results dropdown-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_activity_number_results_text"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:layout_weight=".4"/>

        <!-- Dropdown -->
        <Spinner
            android:id="@+id/search_number_of_results_dropdown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

        </Spinner>
    </LinearLayout>

    <!--Linear layout for Street Name input-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_activity_street_name_text"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:layout_weight=".4"/>

        <EditText
            android:id="@+id/search_street_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/search_activity_street_name_input_hint"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight=".6"/>
    </LinearLayout>

    <Button
        android:id="@+id/search_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_activity_search_button_text"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"/>

</LinearLayout>