<?xml version="1.0" encoding="utf-8"?>

<!-- Built upon Udacity Recycler view tutorial: https://classroom.udacity.com/courses/ud851/lessons/c81cb722-d20a-495a-83c6-6890a6142aac/concepts/b9f86b85-4597-4aba-a806-b8f89b7f92da-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Linear layout containing title and naviagation buttons.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Button to return to groups. -->
        <Button
            android:id="@+id/main_groups_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_groups_button_text"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/button_text_size" />

        <!-- Spacer -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/activity_main_default_group_name"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:id="@+id/group_name_text_view" />

        <!-- Spacer -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"/>

        <Button
            android:id="@+id/main_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/logout_button_text"
            android:textSize="@dimen/button_text_size"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/activity_main_restaurants_text"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/main_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/activity_main_search_button_text"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_restaurants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="4dp"/>
</LinearLayout>
