<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/group_detail_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_detail_group_name_default"
        android:textAlignment="center"
        android:textSize="36sp"
        android:layout_marginTop="12dp"/>

    <!-- Layout for cancel / remove buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <!--Spacer-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"/>

        <Button
            android:id="@+id/group_detail_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_detail_cancel_button_text"
            android:layout_marginStart="16dp"/>

        <!--Spacer-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Button
            android:id="@+id/group_detail_remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_detail_remove_button_text"
            android:layout_marginEnd="16dp"/>

        <!--Spacer-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"/>

    </LinearLayout>

</LinearLayout>