<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- The text view that contains the name of the restaurant. -->
    <TextView
        android:id="@+id/restaunt_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textSize="30sp"
        android:text="@string/restaurant_name_default_string"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <!-- The text view that contains the address of the restaurant -->
    <TextView
        android:id="@+id/restaurant_address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textSize="18sp"
        android:text="@string/restaurant_address_default_string"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaunt_name_text"
        android:layout_marginTop="0dp" />

    <!-- The text view that contains the price range of the restaurant -->
    <TextView
        android:id="@+id/restaurant_price_range_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textSize="18sp"
        android:text="@string/default_price_range_string"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

</android.support.constraint.ConstraintLayout>