<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Linear Layout containing new group button, group name, and logout button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Create a new group button. -->
        <Button
            android:id="@+id/group_list_new_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_group_list_new_group_button_text"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/button_text_size" />

        <!-- Spacer -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/activity_group_list_title_text"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <!-- Spacer -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"/>

        <!-- logout button. -->
        <Button
            android:id="@+id/group_list_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/logout_button_text"
            android:textSize="@dimen/button_text_size"/>

    </LinearLayout>

    <!-- Recycler view to contain the groups.-->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:id="@+id/group_list_rv">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>