<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- The Linear layout containing info about the restaurant. -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:dividerPadding="8dp"
        android:weightSum="1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <!-- The image view that contains the image of the restaurant. -->
        <ImageView
            android:id="@+id/restaurant_image_view"
            android:layout_width="84dp"
            android:layout_height="82dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_margin="16dp"
            android:layout_weight="0"/>

        <!-- The vertical linear layout containing the address and name of the restaurant -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <!-- The text view that contains the name of the restaurant. -->
            <TextView
                android:id="@+id/restaunt_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textSize="30sp"
                android:text="@string/restaurant_name_default_string"
                android:layout_marginBottom="4dp"/>

            <!-- The text view that contains the address of the restaurant. -->
            <TextView
                android:id="@+id/restaurant_address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textSize="18sp"
                android:text="@string/restaurant_address_default_string"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <!-- The text view that contains the price range of the restaurant. -->
        <TextView
            android:id="@+id/restaurant_price_range_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textSize="18sp"
            android:text="@string/default_price_range_string"
            android:layout_gravity="end"
            android:layout_weight="0"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>